Fix DCHECK crash in EnrollmentScreen

The destructor calls g_browser_process->IsShuttingDown(), but that's
not hit in certain situations (see bug). Adding an additional check for
browser_shutdown::IsTryingToQuit() solves this (see bug comment #9).

BUG=chromium:823738
TEST=Enrolled with Chromad domain, which triggers a restart after
     enrollment, and it didn't crash.

Change-Id: Ifc4430012da40ec729d8337a0c7b3be2f44eafb2
Reviewed-on: https://chromium-review.googlesource.com/980852
Reviewed-by: Denis Kuznetsov <antrim@chromium.org>
Reviewed-by: Achuith Bhandarkar <achuith@chromium.org>
Commit-Queue: Lutz Justen <ljusten@chromium.org>
Cr-Commit-Position: refs/heads/master@{#549162}